[Finishes #183753551] update pet search page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
   <h1>pets for life</h1>
   <div class="nav">
     <a class="active" href="index.html">home</a>
-    <a href="#pets">pets</a>
+    <a href="pet.html">pets</a>
     
   </div>
   <div class="main">
