--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,8 +62,18 @@ li a:hover {
   text-decoration: underline;
 }
 
+.featuredpet {
+  display: block;
+  border-style: solid;
+  text-align: center;
+  /* margin: auto; */
+  max-width: fit-content;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(22, 136, 139);
+}
 
-
-
-
+.featuredtitle {
+  text-decoration: underline;
+  color: rgb(63, 4, 119);
+}
 
