--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,8 +67,8 @@ li a:hover {
   border-style: solid;
   text-align: center;
   /* margin: auto; */
-  max-width: fit-content;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  max-width: 400px;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
   color: rgb(22, 136, 139);
 }
 
@@ -77,3 +77,8 @@ li a:hover {
   color: rgb(63, 4, 119);
 }
 
+.row {
+  border-style: double;
+  text-align: center;
+  max-width: 400px;
+}
