[Finishes #183869340] add images to website

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,3 +82,15 @@ li a:hover {
   text-align: center;
   max-width: 400px;
 }
+
+.navimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  float: right;
+}
+
+.main {
+  margin: auto;
+}
