--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 25px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Helvetica, sans-serif;
   background-color: skyblue;
@@ -16,10 +16,10 @@ body {
 
 h1 {
   text-align: center;
-}
+} */
 
-.nav { 
-  /* margin-top: 117px; */
+/* .nav { 
+  
   float: left;
   overflow: hidden;
   background-color: rgb(236, 185, 44);
@@ -72,7 +72,7 @@ li a:hover {
   display: block;
   border-style: solid;
   text-align: center;
-  /* margin: auto; */
+  
   max-width: 400px;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
   color: rgb(22, 136, 139);
@@ -98,5 +98,94 @@ li a:hover {
 }
 
 .list-group-item {
+  text-align: left;
+} */
+
+
+
+
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Helvetica, sans-serif;
+  border: 1px solid black;
+  margin: 2rem;
+  padding: 2rem;
+  background-color: antiquewhite;
+  min-height: 47rem;
+}
+
+
+
+header {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.headerimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: 10%; */
+}
+
+nav {
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+  min-width: auto;
+  width: 80%;
+  /* background-color: aquamarine; */
+  /* border-bottom: 1px solid black; */
+}
+
+nav ul {
+  text-align: center;
+}
+
+nav ul li {
+  display: inline-block;
+  /* background-color: aquamarine; */
+  font-size: large;
+  padding: 1rem;
+}
+
+nav a {
+  text-decoration: none;
+}
+nav a:link {
+  color: rgb(5, 100, 145);
+}
+
+nav a:visited {
+  color: rgb(1, 1, 100);
+}
+
+nav a:hover {
+  color: rgb(92, 146, 5);
+}
+
+nav a:focus {
+  color: aliceblue;
+}
+
+.mainimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  float: right;
+}
+
+h1 {
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+
+.featuredpet {
+  /* border: 1px solid black; */
+  text-align: left;
+}
+
+.list-group {
+  list-style: none;
   text-align: left;
 }
