[Finishes #184027455] add bottom margin

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,6 +108,7 @@ body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Helvetica, sans-serif;
   border: 1px solid black;
   margin: 2rem;
+  margin-bottom: 5rem;
   padding: 2rem;
   background-color: antiquewhite;
   min-height: 55rem;
