--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,20 +68,9 @@ li a:hover {
   text-decoration: underline;
 }
 
-.featuredpet {
-  display: block;
-  border-style: solid;
-  text-align: center;
-  
-  max-width: 400px;
-  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-  color: rgb(22, 136, 139);
-}
 
-.featuredtitle {
-  text-decoration: underline;
-  color: rgb(63, 4, 119);
-}
+
+
 
 .row {
   border-style: double;
@@ -206,4 +195,72 @@ footer {
 
 footer a {
   text-decoration: none;
+}
+
+.dropdown {
+  background-color: #fff;
+  font-size: large;
+  text-align: center;
+  border-radius: 0.5rem;
+  color: darkslategrey
+}
+
+.zip {
+  border-radius: 0.5rem;
+  font-size: large;
+  text-align: center;
+}
+
+.submit {
+  font-size: large;
+  padding: .2rem;
+  border-radius: 0.5rem;
+  color:rgb(1, 1, 100)
+}
+
+.label {
+  font-size: 21px;
+  color:rgb(1, 1, 100)
+}
+
+.results {
+  /* border: 1px solid black; */
+  max-width: fit-content;
+}
+
+/* .list-group {
+  border: 1px solid black;
+} */
+
+.row {
+  border: 2px solid rgb(247, 210, 91);
+  padding: 1rem;
+}
+
+.pet {
+  color:rgb(1, 1, 100);
+  text-align: center;
+}
+.text-secondary {
+  text-align: center;
+}
+
+.list-group-item {
+  text-align: left;
+}
+
+.sendmsg {
+  border-radius: 0.3rem;
+}
+
+.featuredtitle {
+  text-decoration: underline;
+  color: rgb(1, 1, 100)
+}
+
+.featuredpet {
+  max-width: fit-content;
+  text-align: center;
+  /* border: 2px solid rgb(247, 210, 91); */
+  padding: 1rem;
 }
