--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,98 +1,3 @@
-/* body {
-  margin: 25px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Helvetica, sans-serif;
-  background-color: skyblue;
-}
-
-.logoImg {
-  background-image: url("../images/pfl.png");
-  height: 123px;
-  width: 123px;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  float: left
-}
-
-h1 {
-  text-align: center;
-} */
-
-/* .nav { 
-  
-  float: left;
-  overflow: hidden;
-  background-color: rgb(236, 185, 44);
-  text-align: center;
-}
-
-.nav a {
-  float: left;
-  color: black;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  
-}
-
-.nav a:hover {
-  background-color: rgb(165, 194, 201);
-  color: black;
-  text-decoration: underline;
-}
-
-.main {
-  margin: 25px;
-  float: left;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  width: 100%;
-}
-
-ul {
-  list-style-type: none;
-}
-
-li a {
-  text-decoration: none;
-  color: rgb(167, 69, 4);
-  
-}
-
-li a:hover {
-  color: rgb(219, 90, 3);
-  text-decoration: underline;
-}
-
-
-
-
-
-.row {
-  border-style: double;
-  text-align: center;
-  max-width: 400px;
-}
-
-.navimg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  float: right;
-}
-
-.list-group-item {
-  text-align: left;
-} */
-
-
-
-
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Helvetica, sans-serif;
   border: 1px solid black;
@@ -265,11 +170,18 @@ footer a {
   padding: 1rem;
 }
 
-span {
+/* span {
+  font-family: Garamond;
+  font-size: 54px;
+  color: #000;
+} */
+
+.index {
   font-family: Garamond;
   font-size: 54px;
   color: #000;
 }
+
 .main {
   color: darkslategrey;
 }
