--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,17 @@
 body {
+  background-image: url("../images/grass.jpg");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+section {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Helvetica, sans-serif;
   border: 1px solid black;
-  margin: 2rem;
+  margin: 3rem;
   /* margin-bottom: 5rem; */
   padding: 2rem 2rem 0 2rem;
   background-color: antiquewhite;
